syntax = "proto3";

package common;
option go_package = "github.com/pachyderm/pachyderm/v2/src/server/worker/common";

import "pfs/pfs.proto";
import "gogoproto/gogo.proto";

message Input {
  pfs_v2.FileInfo file_info = 1;
  pfs_v2.Commit parent_commit = 2;
  string name = 3;
  string join_on = 4;
  bool outer_join = 5;
  string group_by = 6;
  bool lazy = 7;
  string branch = 8;
  string git_url = 9 [(gogoproto.customname) = "GitURL"];
  bool empty_files = 10;
  bool s3 = 11; // If set, workers won't create an input directory for this input
}
